Project, task cruds and global exception added.

--- a/WebAPI/WebAPI/appsettings.Development.json
+++ b/WebAPI/WebAPI/appsettings.Development.json
@@ -5,4 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
-}
+}, "ConnectionStrings": {
+  "ReportingSystemContext": "Server=(localdb)\\MSSQLLocalDB;Database=ReportingSystemDb;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True"
+},
