--- a/WebAPI/WebAPI/appsettings.Development.json
+++ b/WebAPI/WebAPI/appsettings.Development.json
@@ -4,7 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ReportingSystemContext": "Server=(localdb)\\MSSQLLocalDB;Database=ReportingSystemDb;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "SeriLogConfigurations": {
+    "MsSqlConfiguration": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=ReportingSystemDb;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True",
+      "TableName": "Logs",
+      "AutoCreateSqlTable": true,
+      "AutoCreateSqlDatabase": false
+    },
+    "FileLogConfiguration": {
+      "FolderPath": "/Logs/log_"
+    }
   }
-}, "ConnectionStrings": {
-  "ReportingSystemContext": "Server=(localdb)\\MSSQLLocalDB;Database=ReportingSystemDb;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True"
-},
+}
