--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -1,11 +1,11 @@
 {
   "TokenOptions": {
-    "Audience": "tobeto@tobeto.com",
-    "Issuer": "tobeto@tobeto.com",
-    "AccessTokenExpiration": 10,
+    "Audience": "reportingsystem@reportingsystem.com",
+    "Issuer": "reportingsystem@reportingsystem.com",
+    "AccessTokenExpiration": 1,
+    "RefreshTokenExpiration": 7,
     "SecurityKey": "1ebe91d9-8d3f-4985-b794-8de9a287ab061ebe91d9-8d3f-4985-b794-8de9a287ab061ebe"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
