--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -2,7 +2,7 @@
   "TokenOptions": {
     "Audience": "reportingsystem@reportingsystem.com",
     "Issuer": "reportingsystem@reportingsystem.com",
-    "AccessTokenExpiration": 1,
+    "AccessTokenExpiration": 10,
     "RefreshTokenExpiration": 7,
     "SecurityKey": "1ebe91d9-8d3f-4985-b794-8de9a287ab061ebe91d9-8d3f-4985-b794-8de9a287ab061ebe"
   },
@@ -11,5 +11,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "ahmet.ozkan498@gmail.com",
+    "Token": "uenx ildv ddkd eawz"
   }
 }
