Add appsettings.json to .gitignore

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -16,6 +16,6 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "ahmet.ozkan498@gmail.com",
-    "Token": "uenx ildv ddkd eawz"
+    "Token": "pdpo lycg wiby wfvz"
   }
 }
